@@ -152,6 +152,8 @@ Trunk (unreleased changes)
 
         BOOKKEEPER-520: BookieFailureTest hangs on precommit build (ivank via sijie)
 
+        BOOKKEEPER-447: Bookie can fail to recover if index pages flushed before ledger flush acknowledged (ivank via sijie)
+
       hedwig-protocol:
 
         BOOKKEEPER-394: CompositeException message is not useful (Stu Hood via sijie)
